[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfoverlay"
version = "0.2.2"
description = "Python library for overlaying PDFs with translation, rotation, and scaling."
authors = [
    { name = "Taishi Hashimoto", email = "hashimoto.taishi@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["pdf", "overlay", "cli", "transform", "scale", "rotate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]

dependencies = [
    "pypdf >= 5.6.0",
    "pint",
]

[project.scripts]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
